--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
                                   <input type="password" required id=""  placeholder="contraseña">
                               </div>
                               <div class="myform-button">
-                                <button  class="myform-btn"><a href="./ofertas.html">Ingresar</a></button>
+                                <button  class="myform-btn"><a href="ofertas.html">Ingresar</a></button>                                
                               </div>
                               <a class="input__registro" href="./registrarse.html">
                                   <h5 class="registrar__texto">Registrarse</h5>
