--- a/ofertas.html
+++ b/ofertas.html
@@ -55,7 +55,7 @@
 
       <div class="card-group">
         <div class="card">
-          <img src="https://images.pexels.com/photos/1285625/pexels-photo-1285625.jpeg?cs=srgb&dl=pexels-aleksandar-pasaric-1285625.jpg&fm=jpg" class="card-img-top" alt="...">
+         <a href="ofertas/oferta1.html"><img src="https://images.pexels.com/photos/1285625/pexels-photo-1285625.jpeg?cs=srgb&dl=pexels-aleksandar-pasaric-1285625.jpg&fm=jpg" class="card-img-top" alt="..."></a> 
           <div class="card-body">
             <h5 class="card-title">Grecia</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/815880/pexels-photo-815880.jpeg?cs=srgb&dl=pexels-syed-hasan-mehdi-815880.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta2.html"> <img src="https://images.pexels.com/photos/815880/pexels-photo-815880.jpeg?cs=srgb&dl=pexels-syed-hasan-mehdi-815880.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Pakistan</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/672532/pexels-photo-672532.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="...">
+          <a href="ofertas/oferta3.html"><img src="https://images.pexels.com/photos/672532/pexels-photo-672532.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Londres</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -93,7 +93,7 @@
       </div>
       <div class="card-group">
         <div class="card">
-          <img src="https://images.pexels.com/photos/4161812/pexels-photo-4161812.jpeg?cs=srgb&dl=pexels-hector-perez-4161812.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta4.html"><img src="https://images.pexels.com/photos/4161812/pexels-photo-4161812.jpeg?cs=srgb&dl=pexels-hector-perez-4161812.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Jujuy</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/13452793/pexels-photo-13452793.jpeg?cs=srgb&dl=pexels-alejandro-cuffia-13452793.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta5.html"> <img src="https://images.pexels.com/photos/13452793/pexels-photo-13452793.jpeg?cs=srgb&dl=pexels-alejandro-cuffia-13452793.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Bariloche</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/1203565/pexels-photo-1203565.jpeg?cs=srgb&dl=pexels-rodolfo-clix-1203565.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta6.html"> <img src="https://images.pexels.com/photos/1203565/pexels-photo-1203565.jpeg?cs=srgb&dl=pexels-rodolfo-clix-1203565.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Cataratas del iguazu</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -130,7 +130,7 @@
 
       <div class="card-group">
         <div class="card">
-          <img src="https://images.pexels.com/photos/19872/pexels-photo.jpg?cs=srgb&dl=pexels-manuel-joseph-19872.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta7.html"> <img src="https://images.pexels.com/photos/19872/pexels-photo.jpg?cs=srgb&dl=pexels-manuel-joseph-19872.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">China</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/573122/pexels-photo-573122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="...">
+          <a href="ofertas/oferta8.html">  <img src="https://images.pexels.com/photos/573122/pexels-photo-573122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Mendoza</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -152,7 +152,7 @@
                     </div>
         </div>
         <div class="card">
-          <img src="https://images.pexels.com/photos/4938770/pexels-photo-4938770.jpeg?cs=srgb&dl=pexels-clip-it-comunicaci%C3%B3n-4938770.jpg&fm=jpg" class="card-img-top" alt="...">
+          <a href="ofertas/oferta9.html"> <img src="https://images.pexels.com/photos/4938770/pexels-photo-4938770.jpeg?cs=srgb&dl=pexels-clip-it-comunicaci%C3%B3n-4938770.jpg&fm=jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Neuquen</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
