--- a/registrarse.html
+++ b/registrarse.html
@@ -23,7 +23,7 @@
 
     <section class="myform-area">
         <div class="container">
-        <a href="../index.php"><div class="home mx-auto mb-4" style="width: 50px;"><img src="./imagenes/casa.png" alt="home"></div></a>
+        <a href="index.html"><div class="home mx-auto mb-4" style="width: 50px;"><img src="./imagenes/casa.png" alt="home"></div></a>
         <?php require('registro_usuario.php'); ?>
 
         <div class="row justify-content-center">
